RESOLVED FIXED236294
Adding new files fails to compile after SharedWorkerObjectConnection.h changes
https://bugs.webkit.org/show_bug.cgi?id=236294
Summary Adding new files fails to compile after SharedWorkerObjectConnection.h changes
Kimmo Kinnunen
Reported 2022-02-08 02:49:05 PST
Adding new files fails to compile after SharedWorkerObjectConnection.h changes
Attachments
Patch for landing (2.84 KB, patch)
2022-02-08 02:50 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-02-08 02:50:55 PST
Created attachment 451228 [details] Patch for landing
EWS
Comment 2 2022-02-08 03:54:27 PST
Committed r289363 (246951@main): <https://commits.webkit.org/246951@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451228 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-08 03:55:24 PST
Note You need to log in before you can comment on or make changes to this bug.