Adding new files fails to compile after SharedWorkerObjectConnection.h changes https://bugs.webkit.org/show_bug.cgi?id=236294

Add forward declarations and includes.
Unreviewed build fix.

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-08

Source/WebCore:

* workers/shared/SharedWorkerObjectConnection.h:

Source/WebKit:

* NetworkProcess/SharedWorker/WebSharedWorkerServerConnection.h:


Canonical link: https://commits.webkit.org/246951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289363 268f45cc-cd09-0410-ab3c-d52691b4dbfc