Source/WebCore/workers/shared/SharedWorkerObjectConnection.h
@@ -34,6 +34,7 @@
 namespace WebCore {
 
 class MessagePort;
+class ResourceError;
 class SharedWorkerScriptLoader;
 
 struct SharedWorkerKey;
